[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/login.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/bg/moodyroyalred.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/buttons/connect_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/buttons/connect_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/buttons/connect_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/ui/buttons/connect_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/poppins/Poppins-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/graphics/ui/logo/hedera.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/poppins/Poppins-SemiBold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/graphics/ui/bg/popupdeets.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/poppins/Poppins-Medium.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/graphics/ui/buttons/proceed_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/graphics/ui/buttons/proceed_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/graphics/ui/buttons/proceed_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/audio/music/Handel - Sarabande (Keyboard Suite in D Minor).mp3" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Procceed:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Procceed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "proceed_to_menu"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Procceed:disabled")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Procceed:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 1 ) ]
}

[node name="login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="HederaButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -18.5
margin_right = 131.0
margin_bottom = 18.5
text = "SIGN IN WITH HEDERA"

[node name="ConnectButton1" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = 81.0
margin_right = 131.0
margin_bottom = 118.0
text = "TestConnectButton"

[node name="ConnectButton" type="TextureButton" parent="."]
anchor_left = 0.424805
anchor_top = 0.635
anchor_right = 0.589844
anchor_bottom = 0.703333
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StatusLabel" type="Label" parent="."]
anchor_left = 0.321289
anchor_top = 0.341667
anchor_right = 0.692383
anchor_bottom = 0.38
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AccountInput" type="LineEdit" parent="."]
anchor_left = 0.34082
anchor_top = 0.471667
anchor_right = 0.669922
anchor_bottom = 0.561667
custom_fonts/font = SubResource( 1 )
align = 1
caret_blink = true
caret_blink_speed = 0.1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopUp" type="TextureRect" parent="."]
visible = false
margin_left = 327.0
margin_top = 149.0
margin_right = 718.0
margin_bottom = 540.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="StatusLabel" type="Label" parent="PopUp"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 40.0
margin_right = 91.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "HEDERA TESTNET"
align = 1
valign = 1

[node name="AccountDisplay" type="Label" parent="PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -114.5
margin_right = 152.5
margin_bottom = 54.5
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Procceed" type="TextureButton" parent="PopUp"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -96.0
margin_right = 80.0
margin_bottom = -56.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="PopUp"]
anims/RESET = SubResource( 5 )
anims/proceed_to_menu = SubResource( 6 )

[node name="HederaLogo" type="TextureRect" parent="."]
anchor_left = 0.447266
anchor_top = 0.123333
anchor_right = 0.563477
anchor_bottom = 0.321667
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true
bus = "music"

[connection signal="pressed" from="PopUp/Procceed" to="." method="_on_Procceed_pressed"]
